# mindbase

./: .gitignore  CHANGELOG.md  README.md  install.ps1  install.sh  pyproject.toml
.github/workflows/: test.yml
mindbase/: __init__.py  cli.py  db.py  models.py  utils.py
tests/: test_cli.py  test_db.py
