[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mindbase"
version = "0.2.0"
description = "A local knowledge base CLI tool"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
mindbase = "mindbase.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
